<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.eric.ordertaker.MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:elevation="5dp"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            android:id="@+id/spinselector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drink_name"
                android:textSize="30sp"
                android:visibility="visible"/>
            <Spinner
                android:id="@+id/name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"/>

            <ImageButton
                android:id="@+id/voice_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mic_black_24dp"
                android:visibility="visible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ice"
                android:textSize="30sp"
                android:visibility="visible"/>
            <Spinner
                android:id="@+id/ice_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sugar"
                android:textSize="30sp"/>
            <Spinner
                android:id="@+id/sugar_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6">
            <Button
                android:id="@+id/one_more"
                android:text="@string/one_more"
                android:textSize="30sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

            <Button
                android:id="@+id/checkout"
                android:text="@string/checkout"
                android:textSize="30sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

        </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/result_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:background="?android:selectableItemBackground">
            <TextView
                android:id="@+id/order_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textSize="30sp"
                android:text="hi~"/>
        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>